<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
			android:id="@+id/rootView"
			android:focusableInTouchMode="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true"
	>
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/default_size"
				android:paddingLeft="@dimen/super_default_size"
				android:paddingRight="@dimen/super_default_size"
				android:paddingEnd="@dimen/super_default_size"
				android:paddingStart="@dimen/super_default_size"
		>
			
			
			<ImageView
					android:id="@+id/logo_image"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/logo"
					android:adjustViewBounds="true"
					android:ellipsize="marquee"
					android:layout_marginTop="@dimen/super_default_size"
					android:layout_gravity="center_horizontal"
					android:contentDescription="@string/logo_sign_in"/>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:id="@+id/mainLayout"
					android:orientation="vertical">
				
				<android.support.v7.widget.AppCompatTextView
						android:id="@+id/message_input_header"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:layout_gravity="center_horizontal"
						android:layout_marginBottom="@dimen/default_size"
						style="@style/Label.CredentialHeader"
						android:text="@string/enter_the_code_you_sent"/>
				
				<FrameLayout
						android:id="@+id/login_phone_number_placeholder_view"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/shape_white"
				>
					
					<android.support.v7.widget.AppCompatEditText
							android:id="@+id/verifyCodeET"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingTop="@dimen/fourth_default_size"
							android:paddingBottom="@dimen/default_size"
							android:maxLength="4"
							style="@style/InputField.Credential.Phone"
							android:hint="@string/input_sms_verification_code">
						
						<requestFocus/>
					</android.support.v7.widget.AppCompatEditText>
				
				</FrameLayout>
				
				<android.support.v7.widget.AppCompatButton
						android:id="@+id/continue_button"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/default_size"
						style="@style/Button.Flat.Primary"
						android:text="@string/Continue"
				/>
			
			</LinearLayout>
			
			<android.support.v7.widget.AppCompatTextView
					android:id="@+id/login_cond_tv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/mainLayout"
					android:gravity="center_horizontal|bottom"
					android:layout_alignParentBottom="true"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="@dimen/default_size"
					style="@style/Label.Link"
					android:text="@string/terms_of_use_and_privacy_policy"/>
			
			<include android:id="@+id/progressBar"
			         layout="@layout/include_progress_bar"
			/>
		
		</RelativeLayout>
	</ScrollView>
</layout>