<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
	<data>
		<import type="android.databinding.ObservableMap"/>
		<variable name="requestUser" type="moiavto.mbsl.ru.myauto.data.domainData.AccountCreateRequestDomainModel"/>
	</data>
	<ScrollView
			android:id="@+id/rootView"
			android:focusableInTouchMode="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true"
	>
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/default_size"
				android:paddingLeft="@dimen/super_default_size"
				android:paddingRight="@dimen/super_default_size"
				android:paddingEnd="@dimen/super_default_size"
				android:paddingStart="@dimen/super_default_size"
		>
			
			<ImageView
					android:id="@+id/logoImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/super_default_size"
					android:adjustViewBounds="true"
					android:src="@drawable/logo"
					android:ellipsize="marquee"
					android:layout_gravity="center_horizontal"
					android:contentDescription="@string/logo_sign_in"/>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:id="@+id/mainLayout"
					android:orientation="vertical">
				
				<FrameLayout
						android:id="@+id/login_phone_number_placeholder_view"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/shape_white"
				>
					
					<android.support.v7.widget.AppCompatEditText
							android:id="@+id/phoneET"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingTop="@dimen/fourth_default_size"
							android:paddingBottom="@dimen/default_size"
							style="@style/InputField.Credential.Phone"
							android:text='@{requestUser.phoneNumber}'
							android:hint="@string/input_phone_number">
						
						<requestFocus/>
					</android.support.v7.widget.AppCompatEditText>
				
				</FrameLayout>
				
				<android.support.v7.widget.AppCompatButton
						android:id="@+id/continueButton"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/default_size"
						style="@style/Button.Flat.Primary"
						android:text="@string/Continue"
						android:enabled='@{requestUser.isConditionsAccept}'
				/>
				
				
				<android.support.v7.widget.AppCompatCheckBox
						android:id="@+id/conditionRulesCB"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:button="@drawable/checkbox_selector"
						android:padding="@dimen/half_default_size"
						android:layout_gravity="center_horizontal"
						android:layout_margin="@dimen/default_size"
						android:textSize="@dimen/font_small"
						android:textColor="@color/colorWhite"
						android:text="@string/agrees_with_the_terms_of_use"/>
			
			</LinearLayout>
			
			
			<android.support.v7.widget.AppCompatTextView
					android:id="@+id/conditionRulesTV"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/mainLayout"
					android:gravity="bottom|center_horizontal"
					android:layout_alignParentBottom="true"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="@dimen/default_size"
					style="@style/Label.Link"
					android:text="@string/terms_of_use_and_privacy_policy"/>
			
			<include android:id="@+id/progressBar"
			         layout="@layout/include_progress_bar"
			/>
		</RelativeLayout>
	</ScrollView>

</layout>