<?xml version="1.0" encoding="utf-8"?>
<layout
		xmlns:android="http://schemas.android.com/apk/res/android"
>
	<data>
		<import type="android.view.View"/>
		<import type="android.text.TextUtils"/>
		<variable name="auto" type="moiavto.mbsl.ru.myauto.data.domainData.AutoDomainModel"/>
	</data>
	
	<ScrollView
			android:id="@+id/rootView"
			android:focusableInTouchMode="true"
			android:fillViewport="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorWhite"
		>
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
			>
				
				<android.support.v7.widget.AppCompatEditText
						android:id="@+id/autoNumberET"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:padding="@dimen/default_size"
						style="@style/InputField.Biggest"
						android:hint="@string/CarNumber"
						android:text="@{auto.number}"
				/>
				
				<LinearLayout
						android:id="@+id/markLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="@dimen/default_size"
				>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/manufacturer_header_tv"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textAppearance="@style/TextAppearance.AppCompat.Medium"
							android:textColor="@color/colorBlack"
							android:text="@string/Manufacturer"
					/>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/manufacturer_tv"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/Label.Medium.WithArrow.Blue"
							android:gravity="end"
							android:text="@{auto.autoMarkName}"
					/>
				
				</LinearLayout>
				
				
				<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						style="@style/Divider"/>
				
				<LinearLayout
						android:id="@+id/modelLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="@dimen/default_size"
						android:visibility="@{auto.autoMarkId == null ? View.GONE : View.VISIBLE}"
				>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/model_header_tv"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textAppearance="@style/TextAppearance.AppCompat.Medium"
							android:textColor="@color/colorBlack"
							android:text="@string/Model"
					/>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/modelNameTV"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/Label.Medium.WithArrow.Blue"
							android:gravity="end"
							android:text="@{auto.autoModelName}"/>
				
				</LinearLayout>
				
				
				<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						style="@style/Divider"/>
				
				<LinearLayout
						android:id="@+id/bodyLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="@dimen/default_size"
						android:visibility="@{auto.autoMarkId == null || auto.autoModelId == null ? View.GONE : View.VISIBLE}"
				>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/cars_body_header_tv"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textAppearance="@style/TextAppearance.AppCompat.Medium"
							android:textColor="@color/colorBlack"
							android:text="@string/cars_body"
					/>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/bodyTypeTV"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/Label.Medium.WithArrow.Blue"
							android:gravity="end"
							android:text="@{auto.autoBodyTypeName}"/>
				
				</LinearLayout>
				
				
				<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						style="@style/Divider"/>
				
				<LinearLayout
						android:id="@+id/colorLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="@dimen/default_size"
						android:visibility="@{auto.autoMarkId == null || auto.autoModelId == null || auto.autoBodyTypeId == null ? View.GONE : View.VISIBLE}"
				>
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/color_header_tv"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textAppearance="@style/TextAppearance.AppCompat.Medium"
							android:textColor="@color/colorBlack"
							android:text="@string/Color"
					/>
					
					
					<android.support.v7.widget.AppCompatTextView
							android:id="@+id/colorTypeTV"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/Label.Medium.WithArrow.Blue"
							android:gravity="end"
							android:text="@{auto.autoColorName}"/>
				
				</LinearLayout>
				
				
				<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						style="@style/Divider"/>
				
				
				<android.support.design.widget.TextInputLayout
						android:id="@+id/year_text_input_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="@dimen/default_size"
				>
					
					<android.support.v7.widget.AppCompatEditText
							android:id="@+id/yearET"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_centerHorizontal="true"
							android:layout_centerVertical="true"
							android:hint="@string/Year_of_manufacture"
							android:text="@{auto.year.toString()}"
							android:textColor="@color/colorBlack"
							android:inputType="number"
							android:maxLength="4"
							android:maxLines="10"
							android:ems="10"/>
				
				</android.support.design.widget.TextInputLayout>
				
				
				<View
						android:layout_width="match_parent"
						android:layout_height="1dp"
						style="@style/Divider"/>
				
				
				<LinearLayout
						android:id="@+id/create_review_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:weightSum="100"
						android:gravity="center"
						android:paddingTop="@dimen/double_default_size"
						android:paddingBottom="@dimen/double_default_size"
						android:paddingStart="@dimen/default_size"
						android:paddingLeft="@dimen/default_size"
						android:paddingEnd="@dimen/default_size"
						android:paddingRight="@dimen/default_size"
				>
					<android.support.v7.widget.AppCompatButton
							android:id="@+id/deleteButton"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="50"
							android:layout_marginRight="@dimen/half_default_size"
							android:layout_marginEnd="@dimen/half_default_size"
							android:paddingTop="@dimen/default_size"
							android:paddingBottom="@dimen/default_size"
							style="@style/Button.Flat.Gray"
							android:text="@string/Delete"
					/>
					<android.support.v7.widget.AppCompatButton
							android:id="@+id/addButton"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="50"
							android:layout_marginRight="@dimen/half_default_size"
							android:layout_marginEnd="@dimen/half_default_size"
							android:paddingTop="@dimen/default_size"
							android:paddingBottom="@dimen/default_size"
							style="@style/Button.Flat.Primary"
							android:text="@string/Save"
					/>
				</LinearLayout>
			</LinearLayout>
			
			
			<include
					android:id="@+id/includedProgressDialog"
					layout="@layout/include_progress_bar"/>
		</RelativeLayout>
	</ScrollView>
</layout>